arrumando api
