# src/index.js
@@ -11,7 +11,7 @@ connecttodatabase();
 
 app.use(express.json());
 app.use(cors());
-app.use('/', routes);
+app.use('/characters', routes);
 
 app.listen(port, () => {
   console.log(`Servidor rodando na porta ${port}`);
